Testei tag input para email, data, cor

--- a/estudo_formularios/index-formularios.html
+++ b/estudo_formularios/index-formularios.html
@@ -69,6 +69,22 @@
             <input type="submit" value="Acessar">
         </form>
     </div>
+    
+    <div>
+        <!--
+            Input de data
+        -->
+        <h3>Escolha uma data</h3>
+        <input type="date">
+    </div>
+
+    <div>
+        <!--
+            Input de cor
+        -->
+        <h3>Escolha uma cor</h3>
+        <input type="color">
+    </div>
 
 </body>
 
