--- a/estudo_formularios/formulario-2.html
+++ b/estudo_formularios/formulario-2.html
@@ -17,5 +17,20 @@
         <input type="submit">
         <input type="submit" value="Enviar">
     </form>
+
+    <form action="">
+        <div>
+            <!--
+                Usando caixa de texto
+            -->
+            <h3>Menssagem</h3>
+            <textarea name="msg-contato" id="" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+            <span>
+                <p>E-mail</p>
+                <input type="email" placeholder="seu_email@exemplo.com">
+            </span>
+            
+        </div>
+    </form>
 </body>
 </html>
