--- a/particando-layout-posicao-tags-html5/blog.html
+++ b/particando-layout-posicao-tags-html5/blog.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="top">
         <h1>Café Express</h1>
+        <img id="headerSlogan" src="" alt="">
     </header>
 
 
@@ -18,7 +19,6 @@
         <img src="_imagens/bebida-amarelo-png.png" alt="" width="100" height="100">
     </div>
     <div id="todo-conteudo">
-
 
         <div id="tableContainer">
             <div id="tableRow">
