--- a/particando-layout-posicao-tags-html5/blog.html
+++ b/particando-layout-posicao-tags-html5/blog.html
@@ -13,7 +13,25 @@
         <h1>Café Express</h1>
         <img id="headerSlogan" src="" alt="">
     </header>
+    <!-- Menu de navegação sem tag nova do html -->
+    <!-- <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="selected"><a href="blog.html">Blog</a></li>
+        <li><a href="">Iventions</a></li>
+        <li><a href="">Recipes</a></li>
+        <li><a href="">Locations</a></li>
+    </ul> -->
 
+    <!-- Tag nav do html 5, usada para criar menu -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="selected"><a href="blog.html">Blog</a></li>
+            <li><a href="">Iventions</a></li>
+            <li><a href="">Recipes</a></li>
+            <li><a href="">Locations</a></li>
+        </ul>
+    </nav>
 
     <div id="award">
         <img src="_imagens/bebida-amarelo-png.png" alt="" width="100" height="100">
